Remove common-cli from the workshop

--- a/workshop/guides-template.yaml
+++ b/workshop/guides-template.yaml
@@ -62,7 +62,7 @@ objects:
       modules:
         activate:
         - common-environment
-        - common-cli
+#        - common-cli
         - common-explore
         - common-parksmap-architecture
         - parksmap-docker
