--- a/workshop/java-workshop.yml
+++ b/workshop/java-workshop.yml
@@ -4,6 +4,7 @@ description: Developing Java Applications on OpenShift - Starter Lab
 
 modules:
   activate:
+  - common-workshop-summary
   - common-environment
   - common-parksmap-architecture
 #  - common-cli
