--- a/workshop/php-workshop.yml
+++ b/workshop/php-workshop.yml
@@ -4,6 +4,7 @@ description: Developing PHP Applications on OpenShift - Starter Lab
 
 modules:
   activate:
+  - common-workshop-summary
   - common-environment
   - common-parksmap-architecture
 #  - common-cli
