Content updates, setting fixed gogs password

--- a/apb/Dockerfile
+++ b/apb/Dockerfile
@@ -31,31 +31,31 @@ ICAgIGRlc2NyaXB0aW9uOiBQYXNzd29yZCBpcyByZXF1aXJlZCBmb3IgY3JlYXRpbmcgcHJvamVj\
 dCBhZG1pbiByZXNvdXJjZXMKICAgICAgdHlwZTogc3RyaW5nCiAgICAgIHJlcXVpcmVkOiB0cnVl\
 CiAgICAgIGRpc3BsYXlfdHlwZTogcGFzc3dvcmQKICAgICAgZGlzcGxheV9ncm91cDogT3BlblNo\
 aWZ0IFVzZXIKICAgIC0gbmFtZTogd29ya3Nob3BfdHlwZQogICAgICB0aXRsZTogV29ya3Nob3Ag\
-dHlwZQogICAgICBkZXNjcmlwdGlvbjogVHlwZSBvZiB3b3Jrc2hvcCB0byBkZWxpdmVyIChKYXZh\
-LCBQeXRob24sIE5vZGUuanMsIFBIUCkKICAgICAgdHlwZTogZW51bQogICAgICBlbnVtOiBbJ2ph\
+dHlwZQogICAgICBkZXNjcmlwdGlvbjogVHlwZSBvZiB3b3Jrc2hvcCB0byBkZWxpdmVyIChqYXZh\
+LCBweXRob24sIG5vZGUuanMsIHBocCkKICAgICAgdHlwZTogZW51bQogICAgICBlbnVtOiBbJ2ph\
 dmEnLCAncHl0aG9uJywgJ25vZGUuanMnLCAncGhwJ10KICAgICAgcmVxdWlyZWQ6IHRydWUKICAg\
 ICAgZGlzcGxheV90eXBlOiBzZWxlY3QKICAgICAgZGVmYXVsdDogamF2YQogICAgICBkaXNwbGF5\
 X2dyb3VwOiBXb3Jrc2hvcAogICAgLSBuYW1lOiB1c2VyX2NvdW50CiAgICAgIHRpdGxlOiBOdW1i\
 ZXIgb2YgcGFydGljaXBhbnRzCiAgICAgIGRlc2NyaXB0aW9uOiBOdW1iZXIgb2YgcGFydGljaXBh\
 bnRzIGZvciB0aGUgd29ya3Nob3AuIFRoZXJlIHdpbGwgYmUgcHJvdmlzaW9uZWQgaW5mcmFzdHJ1\
-Y3R1cmUvcHJvamVjdCBmb3IgZWFjaCBwYXJ0aWNpcGFudAogICAgICB0eXBlOiBudW1iZXIKICAg\
-ICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV9ncm91cDogV29ya3Nob3AKICAgIC0gbmFt\
-ZTogb3BlbnNoaWZ0X3VzZXJfcGFzc3dvcmQKICAgICAgdGl0bGU6IE9wZW5TaGlmdCBVc2VyIFBh\
-c3N3b3JkCiAgICAgIGRlc2NyaXB0aW9uOiBUaGUgT3BlblNoaWZ0IHBhc3N3b3JkIGZvciBwYXJ0\
-aWNpcGFudHMgdG8gYmUgZGlzcGxheWVkIGluIHRoZSBsYWIgZ3VpZGUgdG8gcGFydGljaXBhbnRz\
-CiAgICAgIHR5cGU6IHN0cmluZwogICAgICByZXF1aXJlZDogdHJ1ZQogICAgICBkaXNwbGF5X3R5\
-cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91cDogV29ya3Nob3AKICAgIC0gbmFtZTogaW5mcmFz\
-dmNzX2FkbV91c2VyCiAgICAgIHRpdGxlOiBJbmZyYXN0cnVjdHVyZSBTZXJ2aWNlcyBBZG1pbiBV\
-c2VyCiAgICAgIGRlc2NyaXB0aW9uOiBBZG1pbiB1c2VyIGZvciBpbmZyYXN0cnVjdHVyZSBzZXJ2\
-aWNlcyAoR29ncywgTmV4dXMsIC4uLikKICAgICAgdHlwZTogc3RyaW5nCiAgICAgIGRlZmF1bHQ6\
-ICJhZG1pbnVzZXIiCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAgIGRpc3BsYXlfdHlwZTogdGV4\
-dAogICAgICBkaXNwbGF5X2dyb3VwOiBJbmZyYXN0cnVjdHVyZSBTZXJ2aWNlcwogICAgLSBuYW1l\
-OiBpbmZyYXN2Y3NfYWRtX3Bhc3N3b3JkCiAgICAgIHRpdGxlOiBJbmZyYXN0cnVjdHVyZSBTZXJ2\
-aWNlcyBBZG1pbiBQYXNzd29yZAogICAgICBkZXNjcmlwdGlvbjogQWRtaW4gcGFzc3dvcmQgZm9y\
-IGluZnJhc3RydWN0dXJlIHNlcnZpY2VzIChHb2dzLCBOZXh1cywgLi4uKQogICAgICB0eXBlOiBz\
-dHJpbmcKICAgICAgZGVmYXVsdDogImFkbWluMTIzIgogICAgICByZXF1aXJlZDogdHJ1ZQogICAg\
-ICBkaXNwbGF5X3R5cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91cDogSW5mcmFzdHJ1Y3R1cmUg\
-U2VydmljZXMK"
+Y3R1cmUgZm9yIGVhY2ggcGFydGljaXBhbnQKICAgICAgdHlwZTogbnVtYmVyCiAgICAgIHJlcXVp\
+cmVkOiB0cnVlCiAgICAgIGRpc3BsYXlfZ3JvdXA6IFdvcmtzaG9wCiMgICAgLSBuYW1lOiBvcGVu\
+c2hpZnRfdXNlcl9wYXNzd29yZAojICAgICAgdGl0bGU6IE9wZW5TaGlmdCBVc2VyIFBhc3N3b3Jk\
+CiMgICAgICBkZXNjcmlwdGlvbjogVGhlIE9wZW5TaGlmdCBwYXNzd29yZCBmb3IgcGFydGljaXBh\
+bnRzIHRvIGJlIGRpc3BsYXllZCBpbiB0aGUgbGFiIGd1aWRlIHRvIHBhcnRpY2lwYW50cwojICAg\
+ICAgdHlwZTogc3RyaW5nCiMgICAgICByZXF1aXJlZDogdHJ1ZQojICAgICAgZGlzcGxheV90eXBl\
+OiB0ZXh0CiMgICAgICBkaXNwbGF5X2dyb3VwOiBXb3Jrc2hvcAogICAgLSBuYW1lOiBpbmZyYXN2\
+Y3NfYWRtX3VzZXIKICAgICAgdGl0bGU6IEluZnJhc3RydWN0dXJlIFNlcnZpY2VzIEFkbWluIFVz\
+ZXIKICAgICAgZGVzY3JpcHRpb246IEFkbWluIHVzZXIgZm9yIGluZnJhc3RydWN0dXJlIHNlcnZp\
+Y2VzIChHb2dzLCBOZXh1cywgLi4uKQogICAgICB0eXBlOiBzdHJpbmcKICAgICAgZGVmYXVsdDog\
+ImFkbWludXNlciIKICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV90eXBlOiB0ZXh0\
+CiAgICAgIGRpc3BsYXlfZ3JvdXA6IEluZnJhc3RydWN0dXJlIFNlcnZpY2VzCiAgICAtIG5hbWU6\
+IGluZnJhc3Zjc19hZG1fcGFzc3dvcmQKICAgICAgdGl0bGU6IEluZnJhc3RydWN0dXJlIFNlcnZp\
+Y2VzIEFkbWluIFBhc3N3b3JkCiAgICAgIGRlc2NyaXB0aW9uOiBBZG1pbiBwYXNzd29yZCBmb3Ig\
+aW5mcmFzdHJ1Y3R1cmUgc2VydmljZXMgKEdvZ3MsIE5leHVzLCAuLi4pCiAgICAgIHR5cGU6IHN0\
+cmluZwogICAgICBkZWZhdWx0OiAiYWRtaW4xMjMiCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAg\
+IGRpc3BsYXlfdHlwZTogdGV4dAogICAgICBkaXNwbGF5X2dyb3VwOiBJbmZyYXN0cnVjdHVyZSBT\
+ZXJ2aWNlcwo="
 
 COPY playbooks /opt/apb/actions
 COPY roles /opt/ansible/roles
