Changed to hosted-workshop mode and finished updates to mlbparks

--- a/workshop/java-workshop.yml
+++ b/workshop/java-workshop.yml
@@ -23,6 +23,6 @@ modules:
   - nationalparks-java-pipeline-codechanges-gogs
   - mlbparks-templates
   - mlbparks-binary-build
-  - mlbparks-debugging
+#  - mlbparks-debugging
   - common-further-resources
   - common-workshop-links
