--- a/workshop/python-workshop.yml
+++ b/workshop/python-workshop.yml
@@ -22,6 +22,6 @@ modules:
   - nationalparks-python-codechanges-gogs
   - mlbparks-templates
   - mlbparks-binary-build
-  - mlbparks-debugging
+#  - mlbparks-debugging
   - common-further-resources
   - common-workshop-links
