--- a/apb/roles/common-definitions/defaults/main.yml
+++ b/apb/roles/common-definitions/defaults/main.yml
@@ -3,4 +3,4 @@ master_url: "kubernetes.default"
 user_count: 5
 user_format: "user%d"
 namespace: ocp-workshop
-create_projects: true
+create_projects: false # homeroom does this for us
