Check for newer spawner namespace variable first.

--- a/workshop/modules.yaml
+++ b/workshop/modules.yaml
@@ -95,6 +95,7 @@ config:
     - name: INFRA_PROJECT
       value: undefined
       aliases:
+      - SPAWNER_NAMESPACE
       - JUPYTERHUB_NAMESPACE
     ##
     # Module installing CLI
