--- a/workshop/javascript-workshop.yml
+++ b/workshop/javascript-workshop.yml
@@ -20,8 +20,8 @@ modules:
   - nationalparks-javascript-databases
   - nationalparks-application-health
   - nationalparks-javascript-codechanges-gogs
-  - mlbparks-templates
-  - mlbparks-binary-build
+#  - mlbparks-templates
+#  - mlbparks-binary-build
 #  - mlbparks-debugging
   - common-further-resources
   - common-workshop-links
