--- a/mongodb-template.yaml
+++ b/mongodb-template.yaml
@@ -26,8 +26,6 @@ metadata:
   name: mongodb-ephemeral
   labels:
     samples.operator.openshift.io/managed: 'false'
-    app.kubernetes.io/name: mongodb
-    app.kubernetes.io/part-of: workshop
 message: >-
   The following service(s) have been created in your project:
   ${DATABASE_SERVICE_NAME}.
@@ -80,6 +78,9 @@ objects:
       annotations:
         template.alpha.openshift.io/wait-for-ready: 'true'
       name: '${DATABASE_SERVICE_NAME}'
+      labels:
+        app.kubernetes.io/name: mongodb
+        app.kubernetes.io/part-of: workshop
     spec:
       replicas: 1
       selector:
