--- a/workshop/modules.yaml
+++ b/workshop/modules.yaml
@@ -50,6 +50,8 @@ modules:
         name: Application Health
     nationalparks-java-pipeline-codechanges-gogs:
         name: Automation for Your Application on Code Changes
+    nationalparks-dotnet-pipeline-codechanges-gogs:
+        name: Automation for Your Application on Code Changes
     nationalparks-java-codechanges-gogs:
         name: Trigger Automatic Rebuilds on Code Changes
     nationalparks-javascript-codechanges-gogs:
@@ -60,6 +62,8 @@ modules:
         name: Trigger Automatic Rebuilds on Code Changes
     nationalparks-dotnet-codechanges-gogs:
         name: Trigger Automatic Rebuilds on Code Changes
+    nationalparks-dotnet-pipeline:
+        name: Automate Build and Deployment with Pipelines
     nationalparks-java-pipeline:
         name: Automate Build and Deployment with Pipelines
     mlbparks-templates:
