--- a/mongodb-template.yaml
+++ b/mongodb-template.yaml
@@ -11,7 +11,6 @@ metadata:
       documentation in the upstream repository:
       https://github.com/sclorg/mongodb-container.
 
-
       WARNING: Any data stored will be lost upon pod destruction. Only use this
       template for testing
     openshift.io/long-description: >-
@@ -146,7 +145,7 @@ objects:
                 - mountPath: /var/lib/mongodb/data
                   name: '${DATABASE_SERVICE_NAME}-data'
               capabilities: {}
-              image: ' '
+              image: 'registry.access.redhat.com/rhscl/mongodb-36-rhel7:1-73.1619800751'
           dnsPolicy: ClusterFirst
           restartPolicy: Always
           volumes:
@@ -194,20 +193,3 @@ parameters:
     from: '[a-zA-Z0-9]{16}'
     required: true
   - name: MONGODB_DATABASE
-    displayName: MongoDB Database Name
-    description: Name of the MongoDB database accessed.
-    value: sampledb
-    required: true
-  - name: MONGODB_ADMIN_PASSWORD
-    displayName: MongoDB Admin Password
-    description: Password for the database admin user.
-    generate: expression
-    from: '[a-zA-Z0-9]{16}'
-    required: true
-  - name: MONGODB_VERSION
-    displayName: Version of MongoDB Image
-    description: Version of MongoDB image to be used (3.6 or latest).
-    value: '3.6'
-    required: true
-labels:
-  template: mongodb-ephemeral-template
